Added avocado-salad.html and purple-monstrosity-fruit-smoothie.html
Completed the HTML for the two newly added recipe pages and linked it with the homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <h1>Odin Recipes</h1>
          <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/avocado-salad.html">Avocado Salad</a></li>
+            <li><a href="recipes/purple-monstrosity-fruit-smoothie.html">Purple Monstrosity Fruit Smoothie</a></li>
         </ul>
     </body>
 </html>
