--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes Homepage</title>
+        <link rel="stylesheet" href="homepage.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-         <ul>
+        <h1 class="title">Odin Recipes</h1>
+        <ul class="recipe-list">
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/avocado-salad.html">Avocado Salad</a></li>
             <li><a href="recipes/purple-monstrosity-fruit-smoothie.html">Purple Monstrosity Fruit Smoothie</a></li>
